Try to fix clipping

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,6 @@ html {
   user-select: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 }
 
 /* Ton-Connect modal */
